add daily score and final score